# auth_test

./: README.md
.github/workflows/: python-package.yml
biometric_test_project-main/: pyproject.toml  requirements.txt
biometric_test_project-main/core/: settings.py  setup.cfg  test_main.py  urls.py  views.py
